update all packages for security

--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "@babel/core": "^7.7.5",
+    "@material-ui/core": "^4.8.0",
+    "babel": "^6.23.0",
+    "eslint": "^6.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "typescript": "^3.7.3",
+    "webpack": "^4.41.2"
   },
   "scripts": {
     "start": "react-scripts start",
