--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@babel/core": "^7.7.5",
     "@material-ui/core": "^4.8.0",
     "babel": "^6.23.0",
+    "cache-base": "^4.0.0",
     "eslint": "^6.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "set-value": "^3.0.1",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2"
   },
