--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "set-value": "^3.0.1",
-    "typescript": "^3.7.3",
-    "webpack": "^4.41.2"
+    "typescript": "^3.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
