--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,16 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
     "rewrites": [
+      {
+        "source": "/public/**",
+        "destination": "/public.html"
+      },
       {
         "source": "**",
         "destination": "/index.html"
