--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.7.5",
     "@material-ui/core": "^4.8.0",
+    "acorn": "7.1.1",
     "babel": "^6.23.0",
     "cache-base": "^4.0.0",
     "eslint": "^6.7.2",
