--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
+    "minimist": "1.2.2",
     "nodemailer": "^6.4.2"
   },
   "devDependencies": {
