--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "babel": "^6.23.0",
     "cache-base": "^4.0.0",
     "eslint": "^6.7.2",
-    "firebase-functions": "3.3.0",
-    "minimist": "1.2.2",
+    "firebase-functions": "^3.5.0",
+    "minimist": "^1.2.5",
     "nodemailer": "^6.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
