--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cache-base": "^4.0.0",
     "eslint": "^6.7.2",
     "firebase-functions": "^3.5.0",
+    "kind-of": "6.0.3",
     "minimist": "^1.2.5",
     "nodemailer": "^6.4.2",
     "react": "^16.12.0",
