--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel": "^6.23.0",
     "cache-base": "^4.0.0",
     "eslint": "^6.7.2",
+    "firebase": "^7.13.2",
     "firebase-functions": "^3.5.0",
     "kind-of": "6.0.3",
     "minimist": "^1.2.5",
