--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "cache-base": "^4.0.0",
     "eslint": "^6.7.2",
     "firebase": "^7.13.2",
+    "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.5.0",
+    "g": "^2.0.1",
     "kind-of": "6.0.3",
-    "minimist": "^1.2.5",
+    "minimist": "1.2.3",
+    "node-gyp": "^6.1.0",
     "nodemailer": "^6.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
