--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~7.0.0",
+    "firebase-admin": "^8.10.0",
     "firebase-functions": "^2.2.0",
     "minimist": "1.2.3",
     "nodemailer": "^6.4.2"
